<resources>
    <string name="app_name">QuickMeets</string>

    <string name="select_sports_option">Select Sport</string>
    <string-array name="sports_names">
        <item>Soccer</item>
        <item>Football</item>
        <item>Tennis</item>
        <item>Dancing</item>
    </string-array>
    <string name="action_settings">Settings</string>

    <string name="text_logo">Quick Meets</string>
    <string name="text_email">Email</string>
    <string name="text_password">Password</string>
    <string name="text_login">Login</string>
    <string name="text_Register">Register</string>
    <string name="text_RegisterDescription">Please provide the following info to create your Quick Meets Account</string>
    <string name="text_Name">Name</string>
    <string name="text_Age">Age</string>
    <string name="text_Save">Save</string>
    <string name="text_EnterEmail">Please enter your email</string>
    <string name="text_EnterPassword1">Please create a password</string>
    <string name="text_EnterPassword2">Confirm Password </string>
    <string name="text_Bio">Bio</string>
    <string name="text_Edit">Edit</string>
    <string name="text_Logout">Logout</string>
    <string name="text_JoinedEvents">Joined Events</string>
    <string name="text_Favourites">Favourites</string>
    <string name="text_CreatedEvents">Created Events</string>
    <string name="error_name">Enter your name</string>
    <string name="error_email">Enter a valid email address</string>
    <string name="error_password">Enter a valid password</string>
    <string name="text_AccountDetails">Account Details</string>
    <string name="text_equipment">Equipment</string>
    <string name="text_capacity">Capacity</string>
    <string name="text_intensity">Intensity</string>
    <string name="text_map">Map</string>
    <string name="text_list">List</string>
    <string name="text_profile">Profile</string>
    <string name="text_search">Search Events</string>
    <string name="error_age">Please enter a valid Age</string>
    <string name="text_changePassword">Change Password</string>
    <string name="text_update">Update</string>
    <string name="text_newpassword">New Password</string>
    <string name="text_join">Join</string>
    <string name="text_leave">Leave</string>
    <string name="text_description">Description</string>
    <string name="text_EventCreator">Event Creator</string>
    <string name="error_passMatch">Passwords do not match</string>


    <string name="error_bio">Bio can only be 30 characters long</string>


</resources>
