<?xml version="1.0" encoding="utf-8"?>
    <android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/activity_horizontal_margin"
    android:padding="@dimen/activity_horizontal_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_profile_header">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.335">

                <TextView
                    android:id="@+id/txtBio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_Bio"
                    android:textAlignment="center"
                    android:textSize="18sp" />

                <include layout="@layout/item_divider" />

                <TextView
                    android:id="@+id/lblAge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_Age"
                    android:textAlignment="viewStart"
                    android:textSize="18sp"
                    app:layout_constraintHorizontal_bias="0.659"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    tools:layout_editor_absoluteY="91dp" />

                <TextView
                    android:id="@+id/lblFavSports"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_Favourites"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/lblJoinedEvents"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_JoinedEvents"
                    android:textSize="18sp" />

                <ListView
                    android:id="@+id/listViewJoinedEvents"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <TextView
                    android:id="@+id/lblCreatedEvents"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_CreatedEvents"
                    android:textSize="18sp" />

                <ListView
                    android:id="@+id/listViewCreatedEvents"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

